--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
 }
 
 :root {
@@ -63,17 +63,34 @@ small {
   font-size: 0.75rem;
 }
 
+.btn-primary,
+.btn-secondary{
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  color: var(--color6);
+  border: none;
+}
+
+.btn-primary{
+  background-color: var(--color5);
+}
+
+.btn-secondary{
+  background-color: var(--color1);
+  border: 1px solid var(--color5);
+}
+
 body{
   font-family: Robotto;
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
 
   .signup-container{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    flex-direction: column;
+    min-width: 50%;
   }
 
   .left{
@@ -84,6 +101,12 @@ body{
     background-position: center 6.25rem;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 4px -3px 12px 0 rgba(0, 0, 0, 0.2),
+      16px -14px 21px 0 rgba(0, 0, 0, 0.18),
+      37px -31px 29px 0 rgba(0, 0, 0, 0.1),
+      66px -56px 34px 0 rgba(0, 0, 0, 0.03), 102px -87px 38px 0 rgba(0, 0, 0, 0);
 
     .text-container{
       text-align: center;
@@ -101,15 +124,15 @@ body{
   .right{
     background-color: var(--color1);
     img{
-      height: 6.25rem;
+      height: 4.25rem;
     }
 
     form{
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 4rem 2rem;
+      flex-direction: column;
+      padding: 4rem 0rem 0rem 0rem;
       gap: 4rem;
 
       label{
@@ -122,6 +145,11 @@ body{
         display: flex;
         flex-direction: column;
         gap: 3rem;
+
+        small{
+          text-align: center;
+          color: var(--color2);
+        }
 
         .text-inputs{
           display: flex;
@@ -155,7 +183,7 @@ body{
           display: flex;
           flex-direction: column;
           gap: 1rem;
-          
+
           .input-container{
             label{
               color: var(--color2);
@@ -173,6 +201,12 @@ body{
               margin-left: 0.2rem;
             }
           }
+        }
+
+        .button-inputs{
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
         }
       }
     }
