--- a/index.css
+++ b/index.css
@@ -94,7 +94,8 @@ body{
   }
 
   .left{
-    gap: 4rem;
+    display: none;
+    gap: 8rem;
     color: var(--color1);
     background-color: var(--color2);
     background-image: url("./src/public/splash-1.png");
@@ -117,14 +118,29 @@ body{
   
       span{
         color: var(--color5);
+        background-color: var(--color2);
       }
     }
   }
 
   .right{
+    width: 100%;
+    padding: 4rem 2rem;
     background-color: var(--color1);
-    img{
-      height: 4.25rem;
+
+    .right-header{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 3rem;
+      h3{
+        color: var(--color2);
+      }
+      img{
+        width: calc(7.3113rem * 0.7);
+        height: clac(6.25rem * 0.7);
+      }
     }
 
     form{
@@ -240,6 +256,22 @@ body{
 @media (min-width: 992px) {
   html {
     font-size: 1.125rem;
+  }
+
+  body{
+    .left{
+      display: flex;
+    }
+
+    .right{
+      width: auto;
+
+      .right-header{
+        h3{
+          display: none;
+        }
+      }
+    }
   }
 }
 
