--- a/index.css
+++ b/index.css
@@ -69,15 +69,37 @@ small {
   border-radius: 10px;
   color: var(--color6);
   border: none;
+  cursor: pointer;
+  transition: background-color 0.4s;
+  font-size: 1rem;
 }
 
 .btn-primary{
   background-color: var(--color5);
+  &:hover{
+    background-color: #fca84ea8;
+  }
+
+  &:active{
+    background-color: var(--color1);
+  }
 }
 
 .btn-secondary{
   background-color: var(--color1);
   border: 1px solid var(--color5);
+  text-align: center;
+  text-decoration: none;
+
+  &:hover{
+    background-color: var(--color5);
+    color: var(--color1);
+  }
+
+  &:active{
+    color: var(--color2);
+    background-color: var(--color1);
+  }
 }
 
 body{
